feat (Peyvandtel Users): added `show` API and test
added API to show users detailed information. added the test file needed for this API.
